Bug 88864 - [abrt] ModemManager: __strcmp_sse2_unaligned(): ModemManager killed by SIGSEGV
Summary: [abrt] ModemManager: __strcmp_sse2_unaligned(): ModemManager killed by SIGSEGV
Status: RESOLVED FIXED
Alias: None
Product: ModemManager
Classification: Unclassified
Component: general (show other bugs)
Version: 1.4
Hardware: Other Linux (All)
: medium major
Assignee: ModemManager bug user
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-01-29 10:32 UTC by Bastiaan Jacques
Modified: 2015-01-29 20:39 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Bastiaan Jacques 2015-01-29 10:32:08 UTC
Forwarding Red Hat bugzilla entry:

https://bugzilla.redhat.com/show_bug.cgi?id=1177799

The report includes a patch and detailed crash information.
Comment 1 Aleksander Morgado 2015-01-29 11:25:51 UTC
Pushed an updated patch to git master and backported it to the stable mm-1-4 branch, thanks.
Comment 2 Bastiaan Jacques 2015-01-29 20:17:18 UTC
Thanks.

There are a number of similar bugs. Three more segfaults originating from a call to g_str_equal() have been reported to RHBZ:

https://bugzilla.redhat.com/show_bug.cgi?id=1183250
https://bugzilla.redhat.com/show_bug.cgi?id=1156069
https://bugzilla.redhat.com/show_bug.cgi?id=1138212

Perhaps it might be best to simply replace all uses of g_str_equal() with g_strcmp0()?
Comment 3 Aleksander Morgado 2015-01-29 20:27:28 UTC
(In reply to Bastiaan Jacques from comment #2)
> Thanks.
> 
> There are a number of similar bugs. Three more segfaults originating from a
> call to g_str_equal() have been reported to RHBZ:
> 
> https://bugzilla.redhat.com/show_bug.cgi?id=1183250

I'll push a fix for this one.

> https://bugzilla.redhat.com/show_bug.cgi?id=1156069

This one is fixed with the patch I pushed.

> https://bugzilla.redhat.com/show_bug.cgi?id=1138212
> 

This one looks fixed in mm-1-4 and git master already.

> Perhaps it might be best to simply replace all uses of g_str_equal() with
> g_strcmp0()?

Most of the times I personally prefer a explicit check for != NULL and g_str_equal(), but g_strcmp0 really ends up being safer, yes.
Comment 4 Aleksander Morgado 2015-01-29 20:39:46 UTC
(In reply to Aleksander Morgado from comment #3)
> (In reply to Bastiaan Jacques from comment #2)
> > Thanks.
> > 
> > There are a number of similar bugs. Three more segfaults originating from a
> > call to g_str_equal() have been reported to RHBZ:
> > 
> > https://bugzilla.redhat.com/show_bug.cgi?id=1183250
> 
> I'll push a fix for this one.
> 

Fixed it in git master and mm-1-4.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.